--- a/main.css
+++ b/main.css
@@ -1,3 +1,17 @@
+nav {
+  background-color: #FFF;
+}
+
+nav li {
+  margin: 0;
+  padding: 0 10px;
+  display: inline;
+}
+
+nav ul {
+  display: inline;
+}
+
 body {
 	font-family: Georgia, serif;
 	height: 100%;
