--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.navbar-wrapper {
+ navbar-wrapper {
   background-color: #FFF;
   text-color: #ffddf4;
   font-family: Crimson Text;
@@ -7,17 +7,17 @@
 
 }
 
-.nav li {
+nav li {
   margin: 0;
   padding: 0 10px;
   display: inline;
 }
 
-.nav ul {
+nav ul {
   display: inline;
 }
 
-.body {
+body {
 	font-family: Georgia, serif;
 	height: 100%;
 	margin: 0;
@@ -25,23 +25,31 @@
 	width: 100%;
 }
 
-.page-title {
+page-title {
   text-align: center;
   font-weight: 100;
 }
 
-.h1 {
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Proxima Nova", Helvetica, sans-serif;
+  font-weight: 600;
+  color: #222222;
+  line-height: 1.5; 
+  ext-align: center;
+}
+
+h1 {
 	font-size: 32px;
   font-family: Palatino, 'Palatino Linotype', serif;
   color: AntiqueWhite;
 }
 
-.h2 {
+h2 {
 	color: #ffffff;
 	font-size: 56px; 
 }
 
-.p {
+p {
 	color: #ffffff;
 	font-size: 2em;
 }
@@ -55,17 +63,17 @@
 
 /* FOOTER NAVIGATION */
 
-.nav {
+nav {
   background-color: #FFF;
 }
 
-.nav li {
+nav li {
   margin: 0;
   padding: 0 10px;
   display: inline;
 }
 
-.nav ul {
+nav ul {
   display: inline;
 }
 
